feat!: update Snowflake provider to Snowflake-Labs/snowflake
BREAKING CHANGE: Provider changed from snowflakedb/snowflake to Snowflake-Labs/snowflake. Users must update their provider configuration.

- Integrate semantic-release plugins directly into CI workflow
- Remove standalone release.yaml workflow file
- Delete .kiro/specs/snowflake-warehouse-module documentation files
- Remove .terraform.lock.hcl lock file
- Delete utils/command.sh and utils/console-test.txt utility files
- Update snowflake-warehouse module configuration files
- Streamline CI/CD pipeline by consolidating release steps into main workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -210,5 +210,10 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v6
+        with:
+          extra_plugins: |
+            @semantic-release/changelog@6.0.3
+            @semantic-release/git@10.0.1
+            conventional-changelog-conventionalcommits@9.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
